# cupid_revamp

web/: package-lock.json  package.json  tailwind.config.js
web/src/: .env  App.tsx  index.css  index.tsx
web/src/Api/: agent.ts
web/src/Model/: Account.ts  AiGen.ts  Chatroom.ts  Discover.ts  Gpt.ts  Id_Name.ts  Report.ts  User.ts  UserConnection.ts
web/src/Model/CSS/: Style.ts
web/src/component/Error/: ErrorMessage.tsx
web/src/component/FormElement/: CustomCalendar.tsx  InputElement.tsx  RadioElement.tsx  RangeSliderElement.tsx  SelectElement.tsx  SliderElement.tsx  TextAreaElement.tsx
web/src/component/Info/: InfoTemplate.tsx
web/src/component/Loading/: LoadingComponent.tsx
web/src/component/Profile/: ImageScroller.tsx  ProfileCard.tsx  ProfileDetails.tsx
web/src/component/button/: GoogleLoginButton.tsx  RateButton.tsx  ToolButton.tsx
web/src/component/chat/: InputBar.tsx  MessageBox.tsx  TextAreaBar.tsx
web/src/component/countDown/: Timer.css  Timer.tsx
web/src/component/crop/: ProfileCrop.tsx
web/src/page/Face/: FacePage.tsx
web/src/store/: AccountStore.ts  CommonStore.ts  ConnectionStore.ts  DiscoverStore.ts  GptStore.ts  MatchStore.ts  ReportStore.ts  Store.ts  SummaryStore.ts
webapi/: .gitignore  alembic.ini  pyproject.toml  test.db
webapi/app/: main.py
webapi/app/api/v1/: api.py
webapi/app/api/v1/endpoints/: users.py
webapi/app/core/: config.py
webapi/app/db/: __init__.py  session.py
webapi/app/models/: __init__.py  user.py
webapi/app/schemas/: __init__.py  users.py
webapi/app/services/: __init__.py  jwtService.py
(+72 files in other folders)
